--- a/_config.yml
+++ b/_config.yml
@@ -4,11 +4,11 @@ minimal_mistakes_skin    : "default" # 태마 색 설정 "air", "aqua", "contras
 
 # Site Settings
 locale                   : "ko-KR"
-title                    : "Chance" # Meta 태그에 들어가는 영역 , masthead_title등이 없으면 기본값으로 나온다.
+title                    : "Chance Blog" # Meta 태그에 들어가는 영역 , masthead_title등이 없으면 기본값으로 나온다.
 title_separator          : "&#124;" # 타이틀 사이 구분자 <title>Welcome to Jekyll | Minimal Mistakes</title> 해당 형식으로 들어갑니다.
-subtitle                 : "Version 1.0" # 타이틀 아래에 나올 작은 글씨 
+subtitle                 : "" # 타이틀 아래에 나올 작은 글씨 
 name                     : "Chan" # 맨 하단 이름 찍히는 영역
-description              : "개발 등의 공부하는 블로그" # Meta 태그에 들어가는 영역 
+description              : "개발하는 블로그" # Meta 태그에 들어가는 영역 
 url                      : "https://chance0432.github.io" # GitBlog 호스트 주소
 baseurl                  : # subPath https://7271kim.github.io/blog라고 하고 싶을 시 "/blog" 라고 적는다.
 repository               : "chance0432/chance0432.github.io" # GitHub username/repo-name  
@@ -101,10 +101,10 @@ analytics:
 # Site Author
 author:
   name             : "Chan"
-  avatar           : "/assets/images/profile/programmer.png" # 프로필 이미지
-  bio              : "여러가지 개발하고 공부하는 IT 종사자입니다."
+  avatar           : "/assets/images/profile/chance.png" # 프로필 이미지
+  bio              : "여러가지 개발하는 블로그입니다."
   location         : "Republic of Korea"
-  email            : "chance0432@naver.com"
+#  email            : "chance0432@naver.com"
   links:
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
