--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ locale                   : "ko-KR"
 title                    : "Chance Blog" # Meta 태그에 들어가는 영역 , masthead_title등이 없으면 기본값으로 나온다.
 title_separator          : "&#124;" # 타이틀 사이 구분자 <title>Welcome to Jekyll | Minimal Mistakes</title> 해당 형식으로 들어갑니다.
 subtitle                 : "" # 타이틀 아래에 나올 작은 글씨 
-name                     : "Chan" # 맨 하단 이름 찍히는 영역
+name                     : "Chance" # 맨 하단 이름 찍히는 영역
 description              : "개발하는 블로그" # Meta 태그에 들어가는 영역 
 url                      : "https://chance0432.github.io" # GitBlog 호스트 주소
 baseurl                  : # subPath https://7271kim.github.io/blog라고 하고 싶을 시 "/blog" 라고 적는다.
